--- a/index.html
+++ b/index.html
@@ -1,10 +1,80 @@
 <!DOCTYPE html>
-<html>
-<head>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Nicky</title>
 </head>
+
 <body>
-tes
+    <nav>
+        <a href="url">Home</a>
+        <a href="url">About</a>
+        <a href="url">Service</a>
+        <a href="url">Contact</a>
+    </nav>
+    <header>
+        <h1>Welcome!</h1>
+        <h2>I'm Nicky Hervyan</h2>
+        <h3>I make Videography and Media Creation</h3>
+        <button>Explore</button>
+    </header>
+    <main>
+        <div class="about">
+            <img src="2.png" alt="">
+            <div>
+                <h3>About Me</h3>
+                <p>Nicky Hervyan is a Videographer and Photographer from Indonesia. He discovered his passion for
+                    videography in his teenage years, and his interest in photography developed shortly after. He honed
+                    his
+                    skills in photography and videography by taking random photographs and videos as practice. After
+                    graduating school, he worked on small projects with a team of seven people, and eventually landed
+                    larger
+                    corporate, restaurant, and wedding projects. Over the years, Nicky has built a successful career in
+                    videography and photography, and continues to create stunning visuals for his clients.</p>
+            </div>
+        </div>
+        <div class="service">
+            <div>
+                <img src="3.png" alt="">
+                <h4>SERVICE 1</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Faucibus vitae amet aliquet diam.</p>
+                <p class="center">FROM $100 - $150</p>
+            </div>
+            <div>
+                <img src="4.png" alt="">
+                <h4>SERVICE 2</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Faucibus vitae amet aliquet diam.</p>
+                <p class="center">FROM $200 - $250</p>
+            </div>
+            <div>
+                <img src="5.png" alt="">
+                <h4>SERVICE 3</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Faucibus vitae amet aliquet diam.</p>
+                <p class="center">FROM $300 - $350</p>
+            </div>
+
+        </div>
+    </main>
+    <footer>
+        <h4><span class="sign"> SIGN UP TO THE NEWSLETTER</span></h4>
+        <h4>Stay tune to our latest services and projects. </h4>
+        <div class="icon">
+            <img src="email.png" alt="">
+            <img src="inst.png" alt="">
+            <img src="dribble.png" alt="">
+            <img src="linkedin.png" alt="">
+        </div>
+        <form>
+            <input type="text" class="email" placeholder="Email address"><br>
+            <button class="sub">Subscribe</button>
+        </form>
+       
+        <div class="copyright">
+            <h5>COPYRIGHT@2023 | NICKY HERVYAN</h5>
+    </footer>
 </body>
 
 </html>
