--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
         </div>
     </main>
-    <footer>
+    <footer id="contact">
         <div class="a">
             <div>
                 SIGN UP TO THE NEWSLETTER <br><span>Stay tune to our latest services and projects.</span></br>
